--- a/test.html
+++ b/test.html
@@ -37,6 +37,16 @@
    <li id="Link-002"></li>
  </div>
  <script> 
+ /*需要处理字符串格式如下，需要得到a href链接和img src链接*/
+ /*<div style="overflow:hidden;position:relative;"><a style="padding:0;border:0;" href="http://ad.uroaming.cn/advert?click=d2lkdGg9NzUwJmhlaWdodD00MjUmcG9zaXRpb249cG9wLTAxJmlwPTExMS4yMDAuNTIuMiZfPTE0NzYzMjc2MDUwNDkmcGxhbl9pZD0xMDUmaWQ9NjMmcHV0X3R5cGU9ZGF0ZSZsaW5rPWh0dHAlM0ElMkYlMkZtZTIuZG8lMkZ4RGlMZTFRcg"><img style="margin:0 auto;border:0px;width:100%" src="http://ad.uroaming.cn/data/upload/20160824/57bd4a5e7d3e1.jpg"></a><iframe style="width:0;height:0;border:0;position:absolute;top:-1px" src="http://ad.uroaming.cn/advert?browse=d2lkdGg9NzUwJmhlaWdodD00MjUmcG9zaXRpb249cG9wLTAxJmlwPTExMS4yMDAuNTIuMiZfPTE0NzYzMjc2MDUwNDkmcGxhbl9pZD0xMDUmaWQ9NjMmcHV0X3R5cGU9ZGF0ZQ"></iframe></div>*/
+        var str = jsonp;//获取字符串
+        arr=str.split('"');//分割字符串
+        a_href = arr[5];//获取a href 跳转链接
+        img_src = arr[9];//获取img src 图片地址
+        document.getElementById('Link-002').setAttrbute("data-src",img_src);//li添加属性节点data-src 
+        document.getElementById('Link-002').onclick=function(){
+                window.location.href=a_href;//点击li,跳转链接
+            };
         var iframe = document.createElement("iframe");
         iframe.setAttribute("style","width:0;height:0;border:0;position:absolute;top:-1px");
         var a_href = "http://www.baidu.com";
